tests/paczka1/fuzzy1/57679568.err
Error in line 1: 92n S362 71,9
Error in line 3: 92n S485 36,1
Error in line 5: xy9e7D9 S362 80,8
Error in line 9: xy9e7D9 A480 67,8
Error in line 10: xy9e7D9 S362 11,8
Error in line 14: zl06Sw4RP A983 56,8
Error in line 15: xy9e7D9 S485 40,8
